--- a/com-project-clean/pom.xml
+++ b/com-project-clean/pom.xml
@@ -82,6 +82,21 @@
 		    <artifactId>modelmapper</artifactId>
 		    <version>3.1.0</version>
 		</dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-support</artifactId>
+            <version>2.0.8</version>
+        </dependency>
+		<dependency>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-email</artifactId>
+    		<version>1.5</version>
+		</dependency>
       	
 	</dependencies>
 
