--- a/com-project-clean/pom.xml
+++ b/com-project-clean/pom.xml
@@ -97,6 +97,11 @@
     		<artifactId>commons-email</artifactId>
     		<version>1.5</version>
 		</dependency>
+		<dependency>
+  			<groupId>net.sf.json-lib</groupId>
+    		<artifactId>json-lib-ext-spring</artifactId>
+    		<version>1.0.2</version>
+		</dependency>
       	
 	</dependencies>
 
