--- a/com-project-clean/pom.xml
+++ b/com-project-clean/pom.xml
@@ -97,6 +97,13 @@
     		<artifactId>commons-email</artifactId>
     		<version>1.5</version>
 		</dependency>
+		
+		<!-- Gson -->
+		<dependency>
+		        <groupId>com.google.code.gson</groupId>
+		        <artifactId>gson</artifactId>
+		        <version>2.8.5</version>
+		</dependency>
       	
 	</dependencies>
 
