--- a/com-project-clean/src/main/resources/Application.yml
+++ b/com-project-clean/src/main/resources/Application.yml
@@ -23,3 +23,9 @@ spring:
   logging:
     level:
       root: error
+  
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
+    
