--- a/com-project-clean/pom.xml
+++ b/com-project-clean/pom.xml
@@ -113,6 +113,14 @@
 		        <artifactId>gson</artifactId>
 		        <version>2.8.5</version>
 		</dependency>
+		
+		<!-- 썸네일 이미지(이미지 축소)를 위한 dependency -->
+		<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.8</version>
+		</dependency>
       	
 	</dependencies>
 
