--- a/com-project-clean/pom.xml
+++ b/com-project-clean/pom.xml
@@ -106,7 +106,10 @@
             <artifactId>stomp-websocket</artifactId>
             <version>2.3.3</version>
 		</dependency>
-		
+		<dependency>
+        	<groupId>org.springframework</groupId>
+        	<artifactId>spring-websocket</artifactId>
+    	</dependency>
 		<dependency>
             <groupId>net.sf.json-lib</groupId>
             <artifactId>json-lib-ext-spring</artifactId>
