--- a/com-project-clean/pom.xml
+++ b/com-project-clean/pom.xml
@@ -87,11 +87,6 @@
             <artifactId>spring-support</artifactId>
             <version>2.0.8</version>
         </dependency>
-		<dependency>
-    		<groupId>org.apache.commons</groupId>
-    		<artifactId>commons-email</artifactId>
-    		<version>1.5</version>
-		</dependency>
 		
 		<!-- 썸네일 이미지(이미지 축소)를 위한 dependency -->
 		<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
@@ -124,15 +119,17 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>sockjs-client</artifactId>
-            <version>1.1.2</version>
+            <version>1.0.2</version>
         </dependency>
-        
+        <dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator-core</artifactId>
+		</dependency>
       	<dependency>
         	<groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
-        
 	</dependencies>
 
 	<build>
